--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.555.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "framer-motion": "12",
+    "lucide-react": "0.475.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
